<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button"
            android:layout_width="57dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="275dp"
            android:background="@color/transparent"
            android:backgroundTint="#3F51B5"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@string/material_motion_easing_decelerated"
            android:stateListAnimator="@android:anim/bounce_interpolator"
            app:icon="@drawable/ic_back"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconSize="40dp"
            app:iconTint="#486AB9"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/back_button2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:contentDescription="TODO"
            android:focusable="true"
            app:srcCompat="@drawable/ic_outline_shopping_cart_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_show_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_show_detail"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/pepperoni_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="98dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="#486AB9"
                        android:checkable="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/minus"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:cornerRadius="70dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/one"
                        android:textAlignment="center"
                        android:textColor="@color/teal_200"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="50dp"
                        android:backgroundTint="#486AB9"
                        android:checkable="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/plus"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:cornerRadius="70dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/price"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_to_backet"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#486AB9"
                    android:text="@string/add_to_basket"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>